--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -88,7 +88,7 @@ section img {
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-  color: #ff9900;
+  color: #eaeaea;
   letter-spacing: -0.03em;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
                0 0 5px rgba(181, 232, 83, 0.1),
@@ -137,14 +137,14 @@ ul li:before {
   content: ">>";
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   font-size: 13px;
-  color: #b5e853;
+  color: #eaeaea;
   margin-left: -37px;
   margin-right: 21px;
   line-height: 16px;
 }
 
 blockquote {
-  color: #aaa;
+  color: #eaeaea;
   padding-left: 10px;
   border-left: 1px dotted #666;
 }
@@ -154,7 +154,7 @@ pre {
   border: 1px solid rgba(255, 255, 255, 0.15);
   padding: 10px;
   font-size: 14px;
-  color: #b5e853;
+  color: #eaeaea;
   border-radius: 2px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
@@ -182,7 +182,7 @@ hr {
   height: 0;
   border: 0;
   border-bottom: 1px dashed #b5e853;
-  color: #b5e853;
+  color: #eaeaea;
 }
 
 /* Buttons
@@ -227,7 +227,7 @@ hr {
 */
 
 a {
-  color: #63c0f5;
+  color: #eaeaea;
   text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
 }
 
