--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -38,7 +38,7 @@ li {
 header {
   background: rgba(0, 0, 0, 0.1);
   width: 100%;
-  border-bottom: 1px dashed #b5e853;
+  border-bottom: 1px dashed #eaeaea;
   padding: 20px 0;
   margin: 0 0 40px 0;
 }
@@ -57,8 +57,8 @@ header h1 {
   -webkit-font-smoothing: antialiased;
 }
 
-header h1:before {
-  content: "$$$$$  ";
+header h1{
+  /*content: "'  '";*/
   font-size: 24px;
 }
 
@@ -87,7 +87,8 @@ section img {
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  font-family: Monaco;
+  /*, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;*/
   color: #eaeaea;
   letter-spacing: -0.03em;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
@@ -170,7 +171,7 @@ table {
 
 th {
   text-align: left;
-  border-bottom: 1px dashed #b5e853;
+  /*border-bottom: 1px dashed #b5e853;*/
   padding: 5px 10px;
 }
 
@@ -181,7 +182,7 @@ td {
 hr {
   height: 0;
   border: 0;
-  border-bottom: 1px dashed #b5e853;
+  /*border-bottom: 1px dashed #b5e853;*/
   color: #eaeaea;
 }
 
