--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 html {
 
-	background: url("images/bkg.png") no-repeat center center fixed; 
+	background: url("images/users.jpg") no-repeat center center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
